# Ray-Tracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gen_previews.sh
main/: .Makefile.swp  Makefile  raytrace  raytrace.cpp  raytrace.h  readme.md  run.sh
src/: raytrace.cpp  raytrace.h  readme.md
